fix overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -345,15 +345,14 @@ ul {
 
 .customers {
   text-align: center;
-  padding: 3em; }
+  padding: 4em 0; }
 
 .experts {
   padding: 2em;
   text-align: center; }
-  .experts .slider-experts {
-    margin-top: 6em; }
-    .experts .slider-experts .slick-list {
-      overflow: visible; }
+  .experts .slider-experts .slick-list {
+    padding-top: 5em;
+    overflow-y: visible; }
   .experts .expert-card {
     background-color: #fff;
     box-shadow: 1px 1px 5px rgba(96, 96, 96, 0.4);
@@ -366,9 +365,13 @@ ul {
       max-width: 7.5rem;
       width: 100%;
       height: auto;
-      position: absolute;
+      margin: 0 auto;
+      margin-top: -5em;
       top: 0;
-      left: 50%;
-      transform: translate(-50%, -50%); }
+      left: 50%; }
     .experts .expert-card__content {
       padding-top: 3em; }
+
+.contact {
+  text-align: center;
+  padding: 3em; }
