--- a/sass/page/_customers.scss
+++ b/sass/page/_customers.scss
@@ -1,4 +1,4 @@
 .customers {
     text-align: center;
-    padding: 3em;
+    padding: 4em 0;
 }
